--- a/blog/templates/base.html
+++ b/blog/templates/base.html
@@ -26,11 +26,11 @@
                 <div class="navbar-header">
                     <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
                         <span class="sr-only">Toggle navigation</span>
-                        <span class="icon-bar"></span>
+                        <span class="icon-bar"><a href="/post/add"><button type="button" name="add-post" class="btn btn-default navbar-btn">Add Post</button></a></span>
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href="{{ url_for('entries') }}">Blogful</a>
+                    <a class="navbar-brand" href="{{ url_for('posts') }}">Blogful</a>
                 </div>
                 <div class="collapse navbar-collapse">
                     <ul class="nav navbar-nav navbar-right">
