--- a/blog/templates/macros.html
+++ b/blog/templates/macros.html
@@ -4,6 +4,8 @@
         <ul class="list-unstyled">
             <li>
                 {{ post.datetime | dateformat("%d/%m/%y") }}
+                <br>
+                {{ post.author.name }}
             </li>
         </ul>
     </div>
